# azahar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.ci/: clang-format.sh  ios.sh  license-header.rb  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  format.yml  license-header.yml  stale-issues.yml  transifex.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake
src/: CMakeLists.txt
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/: AndroidManifest.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/audio_core/: cubeb_input.cpp  cubeb_sink.cpp
src/citra/: citra.cpp  config.cpp  default_ini.h
src/citra_meta/: CMakeLists.txt  citra.rc  common_strings.h  main.cpp  precompiled_headers.h
src/citra_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  citra_qt.cpp  citra_qt.h  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  hotkeys.cpp  main.cpp  main.h  main.ui  uisettings.cpp  uisettings.h  update_checker.cpp  update_checker.h  user_data_migration.cpp  user_data_migration.h
src/citra_qt/camera/: qt_camera_base.cpp  qt_multimedia_camera.cpp
src/citra_qt/configuration/: config.cpp  config.h  configure.ui  configure_audio.ui  configure_camera.cpp  configure_cheats.cpp  configure_debug.cpp  configure_debug.ui  configure_dialog.cpp  configure_enhancements.cpp  configure_enhancements.h  configure_enhancements.ui  configure_general.cpp  configure_general.ui  configure_graphics.cpp  configure_graphics.ui  configure_hotkeys.cpp  configure_input.cpp  configure_input.ui  configure_layout.cpp  configure_motion_touch.cpp  configure_per_game.cpp  configure_per_game.h  configure_per_game.ui  configure_system.cpp  configure_system.h  configure_system.ui  configure_ui.cpp  configure_ui.ui  configure_web.ui
src/citra_qt/debugger/: profiler.cpp  profiler.h
src/citra_qt/debugger/graphics/: graphics_breakpoints.cpp
src/citra_qt/debugger/ipc/: recorder.cpp
src/citra_qt/dumping/: dumping_dialog.cpp
src/citra_qt/movie/: movie_play_dialog.cpp  movie_play_dialog.ui  movie_record_dialog.cpp
src/citra_qt/multiplayer/: chat_room.cpp  direct_connect.cpp  host_room.cpp  host_room.ui  lobby.cpp  lobby.ui  lobby_p.h  message.cpp
src/citra_qt/util/: util.cpp
src/citra_room/: CMakeLists.txt  citra_room.cpp  citra_room.rc
src/citra_sdl/: CMakeLists.txt  citra_sdl.cpp  citra_sdl.h  config.cpp
src/citra_sdl/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/common/: CMakeLists.txt  common_paths.h  file_util.cpp  file_util.h  math_util.h  settings.cpp  settings.h
src/common/hacks/: hack_list.cpp  hack_list.h  hack_manager.cpp  hack_manager.h
src/common/logging/: backend.cpp  filter.cpp  types.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.h  memory.cpp  memory.h  movie.cpp  perf_stats.cpp  perf_stats.h  system_titles.cpp
src/core/arm/: arm_interface.h
src/core/cheats/: gateway_cheat.cpp
src/core/file_sys/: certificate.cpp  cia_container.cpp  cia_container.h  ncch_container.cpp  ncch_container.h  otp.h  romfs_reader.cpp  romfs_reader.h  ticket.cpp  ticket.h  title_metadata.cpp
src/core/frontend/: emu_window.cpp  framebuffer_layout.cpp
src/core/hle/kernel/: kernel.h  svc.cpp  thread.cpp  thread.h
src/core/hle/service/: service.cpp  service.h
src/core/hle/service/ac/: ac.cpp  ac.h
src/core/hle/service/am/: am.cpp  am.h  am_net.cpp
src/core/hle/service/apt/: apt.cpp
src/core/hle/service/cam/: cam.cpp  cam.h
src/core/hle/service/cfg/: cfg.cpp  cfg.h
src/core/hle/service/frd/: frd.h
src/core/hle/service/fs/: fs_user.cpp
src/core/hle/service/gsp/: gsp_gpu.cpp
src/core/hle/service/http/: ctr-common-1-cert.h  ctr-common-1-key.h  http_c.cpp  http_c.h
src/core/hle/service/ir/: ir_user.cpp
src/core/hle/service/nwm/: nwm_uds.cpp
src/core/hle/service/plgldr/: plgldr.cpp
src/core/hle/service/ptm/: ptm.cpp
src/core/hw/: ecc.cpp  unique_data.cpp  unique_data.h
src/core/hw/rsa/: rsa.cpp
src/core/loader/: 3dsx.cpp  artic.cpp  artic.h  loader.cpp  loader.h  ncch.cpp
src/core/rpc/: udp_server.cpp
src/installer/: citra.nsi
src/network/artic_base/: artic_base_client.cpp  artic_base_client.h
src/tests/common/: file_util.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  rasterizer_accelerated.cpp  rasterizer_interface.h
src/video_core/pica/: pica_core.cpp  pica_core.h
src/video_core/rasterizer_cache/: rasterizer_cache.h
src/video_core/renderer_opengl/: gl_blit_helper.cpp  gl_driver.cpp  gl_rasterizer.cpp  gl_resource_manager.h  gl_shader_manager.cpp  gl_shader_manager.h  renderer_opengl.cpp
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  vk_graphics_pipeline.cpp  vk_instance.cpp  vk_pipeline_cache.cpp  vk_pipeline_cache.h  vk_platform.cpp  vk_rasterizer.cpp  vk_swapchain.cpp
src/video_core/shader/generator/: glsl_shader_gen.cpp  shader_uniforms.h
(+72 files in other folders)
